# CounterFeint

./: .dockerignore  .gitignore  .openenvignore  Dockerfile  README.md  __init__.py  _tmp_driver_smoke.py  baseline_scores.json  blog.md  client.py  docker-compose.yml  eval_suite.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements-dev.txt  requirements-train.txt  verify_fraudster.py
agents/: __init__.py  base.py  hf_investigator.py  llm_fraudster.py  llm_investigator.py  prompts.py
data/: __init__.py  ad_generator.py  advertiser_profiles.py  audit_heuristics.py  episode_loader.py  fraud_patterns.py  landing_pages.py  meta_policy_taxonomy.py  network_generator.py  plausibility_references.py  policy_classifier_data.py  real_world_loader.py  real_world_test_set.json  tool_registry.py
diagnostics/: __init__.py  replay_match.py  verify_fraudster.py  verify_investigator.py
eval_outputs/: eval_summary.md
graders/: __init__.py  auditor_pipeline.py  auditor_track_a.py  auditor_track_b.py  base_grader.py  multi_agent_rewards.py  plausibility_score.py  task1_grader.py  task2_grader.py  task3_grader.py
openenv_ad_fraud_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripted/: __init__.py  _base.py  auditor.py  fraudster.py  investigator.py
server/: Dockerfile  __init__.py  app.py  arena_ui.py  environment.py  evidence_ledger.py  investigate_ui.py  multi_agent_ws.py  public_api.py  referee.py  requirements.txt
server/static/: investigate_hq.html
tests/: test_auditor_track_a.py  test_auditor_track_b.py  test_data_generation.py  test_environment.py  test_eval_suite.py  test_graders.py  test_llm_agents.py  test_meta_policy_taxonomy.py  test_multi_agent_rewards.py  test_policy_classifier.py  test_proxy_reward.py  test_real_world_loader.py  test_rollout_config.py  test_scripted_policies.py  test_three_agent_episode.py  test_training_rollout.py
training/: RESULTS.md  TRAINING_GUIDE.md  __init__.py  baseline_eval.ipynb  compare_runs.ipynb  official_hf_training.ipynb  proxy_reward.py  rollout.py  rollout_config.py  smoke_official_hf.py  train_investigator.ipynb
training/.ipynb_checkpoints/: train_investigator-checkpoint.ipynb
